grammars/tree-sitter-ssh-server-config/test/corpus/invalid_expressions.txt
=====
missing space after keyword
=====
AuthorizedKeysFile"ARG"

---

(server_config
  (ERROR
    (alphanumeric)
    (string)))
=====
missing argument after keyword
=====
AuthorizedKeysFile

---

(server_config
  (ERROR
    (alphanumeric)))
